examples/wordpress/wordpress-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: wordpress
  name: wordpress-service
  namespace: hello-openshift-project
spec:
  host: console.asia-south1-c.c.sapient-office-218912.internal
  path: /wordpress
  to:
    kind: Service
    name: wordpress-service
    weight: 100
  wildcardPolicy: None
status:
  ingress:
  - conditions:
    host: console.asia-south1-c.c.sapient-office-218912.internal
    routerName: router
    wildcardPolicy: None
